# solo12_robot

./: .gitignore  .gitmodules  CMakeLists.txt  DEV.md  Dockerfile  README.md  convert_and_launch  docs.md  gazebo.cpp  key  key.pub  package.xml
.github/workflows/: main.yaml
control/: RobotJointController.cpp
diagrams/: Documentational Block diagram  Overall Architecture  Overview  SDP_
docker/: build.sh  run.sh
docs/: Installation.sh  api.md  dev.md  overview.drawio
launch/: test_solo12_description.launch.py
rviz/: solo12.rviz
script/: build_ws.sh  control.sh  convert_and_launch_model.sh  docker-install.sh  install.sh  launch.sh  script.py  setup_and_launch.sh  solo12.sdf  solo12.urdf
solo12_bringup/: CMakeLists.txt  README.md  package.xml
solo12_bringup/launch/: controllers.launch.py  robot.launch.py  sim_gazebo.launch.py  start_rviz.launch.py  state_publisher.launch.py
solo12_control/control_interface/: CMakeLists.txt  control_interface  control_interface.cpp
solo12_control/control_interface/include/: gazebo_interface.h  hardware_interface.h  webserver.h
solo12_control/control_interface/src/: gazebo_interface.cpp  hardware_interface.cpp  main.cpp  webserver.cpp
solo12_control/control_interface/websocket-server/: package-lock.json  server.js  solo12_control_panel.html
solo12_control/example/: simple_controller.cpp
solo12_control/gazebo_plugin/delayed_plugin/: CMakeLists.txt  DelayedLoading.cpp
solo12_control/gazebo_plugin/joint_control/: CMakeLists.txt  RobotJointController.cpp
solo12_control/gazebo_plugin/joint_control/msgs/: solo_gazebo_msgs.proto
solo12_control/hardware_interface/: CMakeLists.txt
solo12_control/hardware_interface/include/: hardware_interface.h
solo12_control/hardware_interface/src/: hardware_interface.cpp
solo12_description/: CMakeLists.txt  README.md  package.xml
solo12_description/config/: gazebo.yaml  solo12_controllers.yaml
solo12_description/launch/: test_solo12_description.launch.py
solo12_description/meshes/collision/: stand.stl
solo12_description/models/solo12/: solo12.sdf
solo12_description/models/stand/: model.config  stand.sdf
solo12_description/urdf/: model.config  solo12.ros2_control.xacro  solo12.urdf  solo12.urdf.xacro  solo12_world.sdf  stand.urdf
solo12_description/urdf/modified/: leg.xacro  solo12.urdf  solo12.urdf.xacro  stand.urdf
solo12_examples/: CMakeLists.txt  package.xml
solo12_examples/src/: minimal.cpp
solo12_hardware_interface/: CMakeLists.txt  README.md  package.xml  solo12_hardware_interface.xml
solo12_hardware_interface/include/: solo12_h_interface.hpp
solo12_hardware_interface/include/solo12_hardware_interface/: solo12_h_interface.hpp  solo12_hardware_interface.hpp  visibility_control.h
solo12_hardware_interface/src/: solo12_h_interface.cpp  solo12_hardware_interface.cpp
solo12_robot/: CMakeLists.txt  package.xml
solo_api/: CMakeLists.txt
solo_api/include/: solo_api.hpp
solo_api/src/: example.cpp  solo_api.cpp
urdf/: leg.xacro  solo12.urdf  solo12.urdf.xacro
