<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>solo12_hardware_interface</name>
  <version>0.0.0</version>
  <description>Solo12_Hardware_Interface</description>
  <maintainer email="akhilanofficial00@gmail.com">akhilan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>control_msgs</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp</depend>
  <depend>rcpputils</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
